files/pirouter/rules.v4
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT ACCEPT


-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT


-A INPUT -i wlan0 -p tcp --dport 22 -j ACCEPT
-A INPUT -i wlan0 -p tcp --dport 53 -j ACCEPT
-A INPUT -i wlan0 -p udp --dport 53 -j ACCEPT
-A INPUT -i wlan0 -p udp --dport 67 -j ACCEPT


# forwarding
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT


COMMIT
